# app/Http/Resources/EventResource.php
@@ -14,6 +14,13 @@ class EventResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'title' => is_null($this->title) ? '(Sans titre)' : $this->title,
+            'is_all_day' => $this->is_all_day,
+            'starts_at' => $this->starts_at,
+            'ends_at' => $this->ends_at,
+            'notes' => $this->notes
+        ];
     }
 }
